--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mongoose": "^8.7.0",
     "ms": "^2.1.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
