--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/ms": "^0.7.34",
     "bcrypt": "^5.1.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "it-viec": "file:",
