--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "it-viec": "file:",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "mongoose-autopopulate": "^1.1.0",
     "ms": "^2.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
